PRUEBAS/PRUEBA8/y.output
Gramática

    0 $accept: N $end

    1 N: L

    2 L: L B
    3  | B

    4 B: ZERO
    5  | ONE


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    ZERO (258) 4
    ONE (259) 5


No terminales con las reglas donde aparecen

    $accept (5)
        on left: 0
    N (6)
        on left: 1
        on right: 0
    L (7)
        on left: 2 3
        on right: 1 2
    B (8)
        on left: 4 5
        on right: 2 3


Estado 0

    0 $accept: . N $end

    ZERO  desplazar e ir al estado 1
    ONE   desplazar e ir al estado 2

    N  ir al estado 3
    L  ir al estado 4
    B  ir al estado 5


Estado 1

    4 B: ZERO .

    $default  reduce usando la regla 4 (B)


Estado 2

    5 B: ONE .

    $default  reduce usando la regla 5 (B)


Estado 3

    0 $accept: N . $end

    $end  desplazar e ir al estado 6


Estado 4

    1 N: L .
    2 L: L . B

    ZERO  desplazar e ir al estado 1
    ONE   desplazar e ir al estado 2

    $default  reduce usando la regla 1 (N)

    B  ir al estado 7


Estado 5

    3 L: B .

    $default  reduce usando la regla 3 (L)


Estado 6

    0 $accept: N $end .

    $default  aceptar


Estado 7

    2 L: L B .

    $default  reduce usando la regla 2 (L)
